Bug fix regarding z-index
z-index of LetterPopups is increased to be sure that they always appear above other components.

--- a/src/components/letterpopup/LetterPopup.css
+++ b/src/components/letterpopup/LetterPopup.css
@@ -10,6 +10,8 @@
   height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.5);
+
+  z-index: 10;
 }
 
 .letterpopup-classes-cross {
